# ExternalFileManager

./: CMakeLists.txt  README.md
include/: Application.hpp  ContextMenu.hpp  clearLayout.hpp  parentLayout.hpp  split.hpp
include/Elements/: Element.hpp  File.hpp  Folder.hpp  OverlayDraggableWidget.hpp  Table.hpp  Title.hpp  TitleContextMenu.hpp
include/Window/: BackgroundContextMenu.hpp  BackgroundWindow.hpp  UpdatableWindow.hpp
include/Workspace/: Workspace.hpp
src/: Application.cpp  ContextMenu.cpp  clearLayout.cpp  main.cpp  parentLayout.cpp  split.cpp
src/Elements/: Element.cpp  File.cpp  Folder.cpp  OverlayDraggableWidget.cpp  Table.cpp  Title.cpp  TitleContextMenu.cpp
src/Window/: BackgroundContextMenu.cpp  BackgroundWindow.cpp  UpdatableWindow.cpp
src/Workspace/: Workspace.cpp
